--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,19 +1,15 @@
 {
     "configurations": [
         {
-            "name": "Docker: Python - Django",
-            "type": "docker",
+            "name": "Python: Django",
+            "type": "python",
             "request": "launch",
-            "preLaunchTask": "docker-run: debug",
-            "python": {
-                "pathMappings": [
-                    {
-                        "localRoot": "${workspaceFolder}",
-                        "remoteRoot": "/app"
-                    }
-                ],
-                "projectType": "django"
-            }
+            "program": "${workspaceFolder}\\manage.py",
+            "args": [
+                "runserver"
+            ],
+            "django": true,
+            "justMyCode": true
         }
     ]
 }
